Added docs Added uikit package

--- a/partials/layout/footer.hbs
+++ b/partials/layout/footer.hbs
@@ -23,6 +23,8 @@
 
 <div class="overlay"></div>
 
-{% include "templates/modules/cookie.html" %}
+{{> modules/cookie }}
+
+<script type="module" src="/src/script/shared/commonInit.js"></script>
 </body>
 </html>
