--- a/src/style/core/configs/_colors.scss
+++ b/src/style/core/configs/_colors.scss
@@ -4,21 +4,10 @@
     */
 
   // Primary Colors
-  --color-primary-black: #00183C;
+  --color-primary-black: #000;
   --color-primary-white: #FFF;
-  --color-primary-blue-900: #002999;
-  --color-primary-green-500: #00D2AB;
 
   // Supporting Colors
-  --color-supporting-blue-950: #001866;
-  --color-supporting-blue-600: #004DFF;
-  --color-supporting-blue-300: #75BEFF;
-  --color-supporting-green-300: #63F2CE;
-  --color-supporting-green-100: #CDFEEC;
-  --color-supporting-light-blue: #F0F5FF;
-  --color-supporting-gray: #535353;
-  --color-supporting-light-gray: #F0F1F5;
-  --color-supporting-blue-gray: #94A3B8;
   --color-supporting-yellow: #FA0;
   --color-supporting-red: #C80835;
 
