--- a/src/style/core/base/_base.scss
+++ b/src/style/core/base/_base.scss
@@ -5,28 +5,24 @@
 
 :root {
   --scroll-width: 0px;
-  --header-height: #{functions.rem(96)};
+  --header-height: #{functions.rem(70)};
   --container-width: #{functions.rem(1650)};
   --container-indent-x: #{functions.rem(40)};
   --border-radius-base: #{functions.rem(10)};
   --border-radius-sm: #{functions.rem(4)};
-  --border-base: #{functions.rem(1)} solid var(--color-primary-gray);
-  --content-indent: #{functions.rem(160)};
+  --border-base: #{functions.rem(1)} solid var(--color-primary-black);
 
   @include mixins.mq('desktop') {
     --container-width: #{functions.rem(1480)};
-    --content-indent: #{functions.rem(112)};
   }
 
   @include mixins.mq('laptop-large') {
     --container-width: #{functions.rem(1320)};
-    --header-height: #{functions.rem(80)};
   }
 
   @include mixins.mq('laptop') {
     --container-width: #{functions.rem(1160)};
     --content-indent: #{functions.rem(80)};
-    --header-height: #{functions.rem(61)};
   }
 
   @include mixins.mq('tablet') {
@@ -35,7 +31,6 @@
 
   @include mixins.mq('phone') {
     --container-indent-x: #{functions.rem(16)};
-    --content-indent: #{functions.rem(60)};
   }
 }
 
@@ -44,16 +39,6 @@ html {
   box-sizing: border-box;
   height: 100%;
   font-size: (math.div(20px, 16px)) * 100%;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-table {
-  width: 100%;
 }
 
 body {
@@ -92,67 +77,6 @@ a {
   transition: color 0.2s;
 
   @include mixins.hover {
-    color: var(--color-link-hover);
     text-decoration: none;
-  }
-}
-
-p {
-  font-weight: 400;
-}
-
-.overflow {
-  overflow-y: hidden;
-  height: 100%;
-  margin-right: var(--scroll-width);
-}
-
-.truncate {
-  overflow: hidden;
-  max-height: var(--truncate-height, auto);
-  transition: max-height 0.3s ease;
-
-  &--line-clamped {
-    @include mixins.line-clamp(9);
-  }
-
-  &--expanded {
-    max-height: var(--truncate-height-expanded, auto);
-  }
-
-  &__inner {
-    > * {
-      // display: inline-block;
-      // width: 100%;
-    }
-  }
-}
-
-.animation-trigger {
-  .animated-heading,
-  .animated-text,
-  .animated-misc,
-  .animated-right,
-  .animated-left,
-  .animated-fade-in {
-    opacity: 0;
-  }
-}
-
-.animation-start {
-  .animated-heading {
-    animation: content-appearing 1.2s forwards;
-  }
-
-  .animated-text {
-    animation: content-appearing 1.2s forwards 1.2s;
-  }
-
-  .animated-misc {
-    animation: content-appearing 0.8s forwards 2.4s;
-  }
-
-  .animated-fade-in {
-    animation: fadeInEffect 1.3s forwards 0.5s;
   }
 }
